--- a/src/config/template-webhook-config.json5
+++ b/src/config/template-webhook-config.json5
@@ -1,15 +1,15 @@
 {
-  'kasumi::config.disableSnOrderCheck': true,
-  'kasumi::config.token': '1/CR4Zyt=/thUr5d4YVme50pLSq5Ee9MA==',
-  'kasumi::config.connection': 'webhook',
-  'kasumi::config.webhookVerifyToken': '',
-  'kasumi::config.webhookEncryptKey': '',
-  'kasumi::config.webhookPort': 11451,
+    "kasumi::config.disableSnOrderCheck": true,
+    "kasumi::config.token": "1/CR4Zyt=/thUr5d4YVme50pLSq5Ee9MA==",
+    "kasumi::config.connection": "webhook",
+    "kasumi::config.webhookVerifyToken": "",
+    "kasumi::config.webhookEncryptKey": "",
+    "kasumi::config.webhookPort": 11451,
 
-  'kasumi::middleware.accessControl.userGroup.enable': true,
+    "kasumi::middleware.accessControl.userGroup.enable": true,
 
-  'kasumi::config.database': 'mongodb',
-  'kasumi::config.mongoConnectionString': 'mongodb://localhost:27017',
-  'kasumi::config.mongoDatabaseName': 'kasumi',
-  'kasumi::config.mongoCollectionName': 'template'
+    "kasumi::config.database": "mongodb",
+    "kasumi::config.mongoConnectionString": "mongodb://localhost:27017",
+    "kasumi::config.mongoDatabaseName": "kasumi",
+    "kasumi::config.mongoCollectionName": "template",
 }
