--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
+        "importsNotUsedAsValues": "remove",
         "declaration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "es2020",
-        "module": "commonjs",
-        "moduleResolution": "node",
+        "module": "Node16",
+        "preserveValueImports": false,
+        "moduleResolution": "node16",
         "lib": [
+            "DOM",
             "ES2020",
             "ES2021",
             "ES2021.String"
@@ -27,9 +30,8 @@
         "forceConsistentCasingInFileNames": true
     },
     "include": [
-        // "./src/commands/shared/*.ts",
-        // "./src/utils/*.ts",
-        // "./src/index.ts",
+        "env.d.ts",
+        "src/**/*",
         "./src/**/*.ts",
         ".eslintrc.js",
     ],
